rbx_binary/src/tests/snapshots/rbx_binary__tests__util__number-values-with-security-capabilities__decoded.snap
---
source: rbx_binary/src/tests/util.rs
expression: decoded_viewed
---
- referent: referent-0
  name:
    Utf8:
      - Hmmm
  class: NumberValue
  properties:
    Attributes:
      Attributes: {}
    Capabilities:
      SecurityCapabilities: 0
    Sandboxed:
      Bool: false
    SourceAssetId:
      Int64: -1
    Tags:
      Tags: []
    Value:
      Float64: 2.71828182846
  children: []
- referent: referent-1
  name:
    Utf8:
      - WhereIs
  class: NumberValue
  properties:
    Attributes:
      Attributes: {}
    Capabilities:
      SecurityCapabilities: 2882400000
    Sandboxed:
      Bool: false
    SourceAssetId:
      Int64: -1
    Tags:
      Tags: []
    Value:
      Float64: 2.71828182846
  children: []
